se cambio de lugar el requirements.txt

--- a/Invernadero/Windows/templates/home.html
+++ b/Invernadero/Windows/templates/home.html
@@ -38,7 +38,7 @@
       <p class="animate-fade-in animate-delay-500">Bienvenido de nuevo a tu invernadero inteligente. Aquí puedes controlar y monitorear el estado de tus cultivos.</p>
       <button onclick="location.href='#estadisticas'" class="hover:scale-110 transition-all duration-300 animate-bounce">Ver estadísticas</button>
     </div>
-    <img src="{% static 'img/invernadero-home.png' %}" alt="Ilustración invernadero" class="animate-slide-in-right animate-duration-1000 hover:scale-105 transition-transform duration-300">
+    <img src="{% static 'img/invernadero-home.png' %}" alt="Ilustración invernadero" loading="lazy" class="animate-slide-in-right animate-duration-1000 hover:scale-105 transition-transform duration-300">
   </section>
 
   <!-- SECCIÓN INFO -->
