--- a/Invernadero/users/templates/signin.html
+++ b/Invernadero/users/templates/signin.html
@@ -13,7 +13,7 @@
 
         <!-- Parte derecha con formulario -->
         <form action="{% url 'signin' %}" method="POST" class="form-login">
-            <img src="../static/img/liana2.png" class="flora" alt="">
+            <img src="https://raw.githubusercontent.com/Waal69/evaluacion/refs/heads/main/img/adios.jpg" class="flora" alt="">
             {% csrf_token %}
 
             
